modify docs.getFirst()